logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T120000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:29:12.486+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [queued]>
[2025-07-24T14:29:12.495+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [queued]>
[2025-07-24T14:29:12.495+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:29:12.505+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 12:00:00+00:00
[2025-07-24T14:29:12.511+0000] {standard_task_runner.py:60} INFO - Started process 780 to run task
[2025-07-24T14:29:12.514+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T12:00:00+00:00', '--job-id', '542', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmptpsgjh0n']
[2025-07-24T14:29:12.517+0000] {standard_task_runner.py:88} INFO - Job 542: Subtask Load_songplays_fact_table
[2025-07-24T14:29:12.575+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:29:12.641+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T12:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T12:00:00+00:00'
[2025-07-24T14:29:12.647+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:29:12.658+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T120000, start_date=20250724T142912, end_date=20250724T142912
[2025-07-24T14:29:12.668+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 542 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 780)
[2025-07-24T14:29:12.687+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:29:12.708+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:27:51.450+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [queued]>
[2025-07-24T17:27:51.465+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [queued]>
[2025-07-24T17:27:51.466+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:27:51.485+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 12:00:00+00:00
[2025-07-24T17:27:51.498+0000] {standard_task_runner.py:60} INFO - Started process 2464 to run task
[2025-07-24T17:27:51.503+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T12:00:00+00:00', '--job-id', '2373', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp6_8p1az0']
[2025-07-24T17:27:51.507+0000] {standard_task_runner.py:88} INFO - Job 2373: Subtask Load_songplays_fact_table
[2025-07-24T17:27:52.107+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T12:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:27:52.400+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T12:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T12:00:00+00:00'
[2025-07-24T17:28:22.100+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:28:22.151+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T120000, start_date=20250724T172751, end_date=20250724T172822
[2025-07-24T17:28:22.502+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:28:23.605+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
